测试对象分配在JVM的位置，优先为Eden